--- a/backrooms-liminal.html
+++ b/backrooms-liminal.html
@@ -11,6 +11,10 @@
     <header>
         <h1 id="title">The Backrooms: Liminal</h1>
     </header>
+
+    <main id="content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iure, error illum fuga alias neque magnam molestiae voluptates, officiis repellat pariatur nam assumenda ex soluta, laboriosam blanditiis voluptate ducimus. Exercitationem.</p>
+    </main>
     
 </body>
 </html>
